--- a/shichuanpo/_config.yml
+++ b/shichuanpo/_config.yml
@@ -70,5 +70,5 @@ theme: yilia
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: https://github.com/shichuanpo/shichuanpo.github.io.git
+  repository: git@github.com:shichuanpo/shichuanpo.github.io.git
   branch: master
